# Tarea-Extraclase-1-Datos-2

./: .gitignore  CMakeLists.txt  README.md  main.cpp
Collector/: Collector.cpp  Collector.h
LinkedList/: LinkedList.cpp  LinkedList.h
List/: List.cpp  List.h
Node/: Node.cpp  Node.h
html/: _collector_8cpp.html  _collector_8cpp__incl.dot  _collector_8cpp_source.html  _collector_8h.html  _collector_8h__dep__incl.dot  _collector_8h__incl.dot  _collector_8h_source.html  _linked_list_8cpp.html  _linked_list_8cpp__incl.dot  _linked_list_8cpp_source.html  _linked_list_8h.html  _linked_list_8h__dep__incl.dot  _linked_list_8h__incl.dot  _linked_list_8h_source.html  _node_8cpp.html  _node_8cpp__incl.dot  _node_8cpp_source.html  _node_8h.html  _node_8h__dep__incl.dot  _node_8h__incl.dot  _node_8h_source.html  annotated.html  class_collector-members.html  class_collector.html  class_linked_list-members.html  class_linked_list.html  class_node-members.html  class_node.html  classes.html  dir_000001_000003.html  dir_000002_000003.html  dir_000003_000001.html  dir_53dcf42a3f77ddc8ddc4e29dac0b4a66.html  dir_53dcf42a3f77ddc8ddc4e29dac0b4a66_dep.dot  dir_65b8d0b6e0e29b5eee9690bc1b0d6223.html  dir_65b8d0b6e0e29b5eee9690bc1b0d6223_dep.dot  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.dot  dir_b58074d1ab8f1cdb408f4e393650beb8.html  dir_b58074d1ab8f1cdb408f4e393650beb8_dep.dot  (+6 more)
html/search/: all_0.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  classes_0.js  classes_1.js  files_0.js  files_1.js  (+10 more)
(+6 files in other folders)
